Fixed logo misalignment with responsive menu bar

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -323,7 +323,7 @@ footer p {
     }
 
     .logo {
-        margin: 1.5rem 0rem 0rem 1rem;
+        margin: 0.75rem 0rem 0rem 1rem;
     }
 
     .top-menu {
